# 3Di-Renderer

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md  install.sh  meson.build  meson_options.txt
.cache/clangd/index/: main.cpp.923AAD55C59F2B45.idx
.github/workflows/: lint-format.yaml  meson-test.yaml
assets/: meson.build
resources/: meson.build  resources.gresource.xml
resources/ui/: di_renderer.ui
src/: main.cpp  meson.build
src/core/: AppData.cpp  AppData.hpp  FaceVerticeData.hpp  Mesh.cpp  Mesh.hpp  RenderMode.hpp  Transform.cpp  Transform.hpp  meson.build
src/io/: ObjData.hpp  ObjReader.cpp  ObjReader.hpp  ObjWriter.cpp  ObjWriter.hpp  meson.build
src/math/: Camera.cpp  Camera.hpp  Matrix4x4.cpp  Matrix4x4.hpp  MatrixTransforms.cpp  MatrixTransforms.hpp  Transform.cpp  Transform.hpp  UVCoord.cpp  UVCoord.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  matrix4x4.hpp  meson.build  vector3.hpp
src/math/Impl/: Matrix4x4.cpp  UVCoord.cpp  Vector3.cpp  Vector4.cpp
src/math/headerImpl/: UVCoord.cpp  Vector3.cpp
src/math/impl/: Matrix4x4.cpp  Vector3.cpp  Vector4.cpp
src/render/: Camera.cpp  Camera.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OpenGLArea.cpp  OpenGLArea.hpp  TextureLoader.cpp  TextureLoader.hpp  Triangle.cpp  Triangle.hpp  Vertex.hpp  meson.build
src/ui/: CameraSelectionHandler.cpp  CameraSelectionHandler.hpp  DiMainWindow.cpp  DiMainWindow.hpp  DiRendererApp.cpp  DiRendererApp.hpp  MainWindowHandler.cpp  MainWindowHandler.hpp  OpenGLArea.cpp  OpenGLArea.hpp  TransformTypeHelper.hpp  di_renderer.ui  meson.build
src/ui/res/: di_renderer.ui
tests/: meson.build  test_core.cpp  test_io.cpp  test_math.cpp  test_rendering.cpp  test_transforms.cpp
