ui_lib = static_library(
    'ui',
    'OpenGLArea.cpp',
    'DiMainWindow.cpp',
    'DiRendererApp.cpp',
    include_directories: incdir,
    dependencies: [
        gtkdep,
        opengl_dep,
        epoxy_dep
    ],
    link_with: [
#        core_lib,
#        math_lib,
#        render_lib,
#        io_lib
    ]
)
